--- a/nest/templates/default/database.yml.erb
+++ b/nest/templates/default/database.yml.erb
@@ -2,6 +2,6 @@
   adapter: <%= @adapter %>
   host: <%= @host %>
   database: <%= @database %> 
-  username:
-  password:
+  username: "deployer"
+  password: "deployer"
   reconnect: true
